Bug 556694  Selection color isn't reverted when input field is specified only background-color r=dbaron